ponto adicionado em <p> da class statsBom

--- a/views/stats.ejs
+++ b/views/stats.ejs
@@ -35,7 +35,7 @@
               <b>
                 <%= updatedAt %>
               </b>
-              <p>Última Visita</p>
+              <p>Última Visita.</p>
           </div>
        </div>
        <a href="/" class="btn btn-primary">Encurtar nova URL</a>
